fix(fe): correct profile menu for mobile screens
the profile menu on mobile screens was invisible before, now there is an account icon you can click

--- a/client/src/components/layout/NavigationBar/NavigationBar.module.css
+++ b/client/src/components/layout/NavigationBar/NavigationBar.module.css
@@ -104,9 +104,18 @@
     user-select: none;
 }
 
+.profileIcon {
+    display: none;
+    height: 35px;
+}
+
 @media (max-width: 450px) {
-    .profileMenu > span {
+    .profileUsername {
         display: none;
+    }
+
+    .profileIcon {
+        display: inline;
     }
 }
 
